load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sandboxes",
    srcs = [
        "instances.go",
        "json.go",
        "sandboxes.go",
    ],
    importpath = "github.com/envoyproxy/envoy-perf/salvo-remote/sandboxes",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_hashicorp_go_version//:go_default_library",
        "@com_github_hashicorp_hc_install//product:go_default_library",
        "@com_github_hashicorp_hc_install//releases:go_default_library",
        "@com_github_hashicorp_terraform_exec//tfexec:go_default_library",
    ],
)

go_test(
    name = "sandboxes_test",
    srcs = [
        "instances_test.go",
        "json_test.go",
        "sandboxes_test.go",
    ],
    embed = [":sandboxes"],
    deps = [
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_hashicorp_terraform_exec//tfexec:go_default_library",
    ],
)
